--- a/assets/less/base_modules/form.less
+++ b/assets/less/base_modules/form.less
@@ -43,7 +43,7 @@
     &:focus {
         outline: 0;
         outline: thin dotted \9;
-        ._box-shadow-custom (~"inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6)");
+        ._depth-1 ();
     }
 }
 
