--- a/assets/less/base_modules/overlay.less
+++ b/assets/less/base_modules/overlay.less
@@ -22,7 +22,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 9999;
+    z-index: @Z-INDEX-Level7;
     overflow: auto; // If less than the height of the browser
 
     visibility: hidden;
