--- a/assets/less/base_modules/story.less
+++ b/assets/less/base_modules/story.less
@@ -20,7 +20,7 @@
 	._margin (10, 0, 20 ,0);
 	._padding (20);
 	._border-radius (2);
-	._box-shadow-custom (~"0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)");
+	._depth-1 ();
 }
 
 .story__title {
