--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -22,6 +22,7 @@
 @import "base_modules/tabs.less";
 @import "base_modules/alert.less";
 @import "base_modules/pagination.less";
+@import "base_modules/box.less";
 
 // MODULES
 // ----------------------------------------------------
