--- a/content/Systems/depth.hbs
+++ b/content/Systems/depth.hbs
@@ -4,6 +4,8 @@ title: Depth
 nav-title: "Depth"
 nav-text: "Depth"
 nav-variant: "depth"
+
+class-master: "depth"
 ---
 
 <main class="w w--main">
@@ -31,6 +33,13 @@ nav-variant: "depth"
 
 		            <div class="secton__body">
 				        <!-- code -->
+
+				        {{> box box-d0 }}
+				        {{> box box-d1 }}
+				        {{> box box-d2 }}
+				        {{> box box-d3 }}
+				        {{> box box-d4 }}
+				        {{> box box-d5 }}
 
 				        <!-- end of code -->
 			        </div>
@@ -60,6 +69,10 @@ nav-variant: "depth"
 		            </header>
 		            <div class="section__body rte">
 
+		            	<ul>
+		            		<li><a href="https://www.polymer-project.org/0.5/docs/elements/paper-shadow.html" target="_blank">https://www.polymer-project.org/0.5/docs/elements/paper-shadow.html</a></li>
+		            	</ul>
+		            	
 		            </div>
 		        </section>
 
