--- a/content/_layouts/default.hbs
+++ b/content/_layouts/default.hbs
@@ -37,7 +37,7 @@
 
 </head>
 
-<body id="{{{app.siteclass}}}">
+<body id="{{{app.siteclass}}}"  class="m{{#if page.class-master }} m--{{page.class-master }} {{/if}}">
 
     <!--[if lt IE 8]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> to improve your experience.</p>
