--- a/content/_partials/story-ident.hbs
+++ b/content/_partials/story-ident.hbs
@@ -3,7 +3,7 @@
 <a href="#" class="ident__avatar-link">
 	<img src="{{content.avatar}}" class="ident__avatar" alt="" />
 </a>
-<div class="ident__info"><a href="#" class="ident__author">{{content.name}}</a> [ACTION] [CITATIONAUTHOR]
+<div class="ident__info"><a href="{{content.url}}" class="ident__author">{{content.name}}</a> [ACTION] [CITATIONAUTHOR]
 	<time datetime="YYYY-MM-DDThh:mm:ssTZD" class="ident__when">[YYYY-MM-DDThh:mm:ssTZD]</time>
 </div>
 </div>
