--- a/assets/less/base_modules/button.less
+++ b/assets/less/base_modules/button.less
@@ -61,9 +61,9 @@
 // ----------------------------------------------------
 
 .button {
-    display: block;
     color: @BUTTON-TextColor;
     background-color: @BUTTON-BgColor;
+    display: block;
     text-decoration: none;
     border: none;
     cursor: pointer;
@@ -79,9 +79,9 @@
     }
 
     &:hover {
-        background-color: @BUTTON-HoverColor;
         color: @BUTTON-TextColor;
-        box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+        background-color: @BUTTON-HoverColor;
+        ._depth-1 ();
     }
 
     &:active {
@@ -127,10 +127,10 @@
     text-decoration: none;
     cursor: pointer;
     line-height: 1;
-    z-index: 100;
+    z-index: @Z-INDEX-Level1;
     ._padding (7);
-    ._box-shadow-custom(~"0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)");
     ._font-size (30);
+    ._depth-4 ();
 
     &:link,
     &:visited,
@@ -173,7 +173,6 @@
         position: absolute;
         top: 0;
         right: 0;
-        z-index: 100;
         height: 44px;
         width: 44px;
         cursor: pointer;
