--- a/assets/less/base_modules/modal.less
+++ b/assets/less/base_modules/modal.less
@@ -20,10 +20,10 @@
 	background-color: @MODAL-MaskBgColor;
 	height: 100%;
 	width: 100%;
-	z-index: 3;
 	position: fixed;
 	top: 0;
 	left: 0;
+	z-index: @Z-INDEX-Level7;
 	._transition-custom(~"visibility 0 linear .4s,opacity .4s cubic-bezier(.4,0,.2,1)");
 	._transform-custom(~"translateZ(0)");
 }
