--- a/assets/less/base_modules/panel.less
+++ b/assets/less/base_modules/panel.less
@@ -18,7 +18,7 @@
 	background-clip: padding-box;
 	._padding (20);
 	._border-radius (2);
-	._box-shadow-custom(~"0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)");
+	._depth-1 ();
 }
 
 .panel__title {
