--- a/assets/less/base_modules/rte.less
+++ b/assets/less/base_modules/rte.less
@@ -52,7 +52,7 @@
         ._margin (@TYPE-LineHeight, 0);
         ._border-radius (2);
         ._font-size (@TYPE-SIZE-Epsilon);
-        ._box-shadow-custom(~"0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)");
+        ._depth-1 ();
 
         cite {
             font-family: @TYPE-FontFamily;
