--- a/assets/less/modules/wrap.less
+++ b/assets/less/modules/wrap.less
@@ -15,12 +15,14 @@
 .w--header {
 	background-color: lighten(@NAVIGATION-BgColor, 30%);
 	text-align: center;
+	z-index: @Z-INDEX-Level6;
 	._padding (20, 10, 0, 10);
 }
 
 .w--navigation {
 	background-color: @NAVIGATION-BgColor;
-	._box-shadow-custom(~"0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)");
+	z-index: @Z-INDEX-Level5;
+	._depth-2 ();
 }
 
 .w--main {
@@ -55,16 +57,14 @@
 		position: fixed;
 		top: 0;
 		text-align: left;
-		z-index: 100;
 		._padding (0, 0, 0, 10);
-		._box-shadow-custom(~"0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)");
+		._depth-2 ();
 	}
 
 	.w--navigation {
         display: none;
         position: fixed;
         top: 44px;
-        z-index: 100;
 	}
 
 	.w--main {
