--- a/content/_partials/ALLOY_footer.hbs
+++ b/content/_partials/ALLOY_footer.hbs
@@ -6,19 +6,11 @@
 		</div>
 	
 		<div class="c__md--1-3 c__lg--1-3">
-			<div class="panel">
-				<div class="panel__title"></div>
-				<div class="panel__body"></div>
-				<div class="panel__actions"></div>
-			</div>
+			{{>panel panel}}
 		</div>
 		
 		<div class="c__md--1-3 c__lg--1-3">
-			<div class="panel">
-				<div class="panel__title"></div>
-				<div class="panel__body"></div>
-				<div class="panel__actions"></div>
-			</div>
+			{{>panel panel}}
 		</div>
 
 	</div>
