Many changes to Meta details
this was to help get the navigation working better

--- a/content/Checklists/_checklist.hbs
+++ b/content/Checklists/_checklist.hbs
@@ -5,6 +5,7 @@ title: Checklist
 nav-title: "Checklist"
 nav-text: "Checklist"
 nav-variant: "checklist"
+page-category: "checklists"
 ---
 
 <main class="w w--main">
