--- a/content/Components/accordions.hbs
+++ b/content/Components/accordions.hbs
@@ -4,6 +4,7 @@ title: Accordions
 nav-title: "Accordions"
 nav-text: "Accordions"
 nav-variant: "accordions"
+page-category: "components"
 ---
 
 <main class="w w--main">
