--- a/content/Components/alerts.hbs
+++ b/content/Components/alerts.hbs
@@ -4,6 +4,7 @@ title: Alerts
 nav-title: "Alerts"
 nav-text: "Alerts"
 nav-variant: "alerts"
+page-category: "components"
 ---
 
 <main class="w w--main">
