--- a/content/Components/article.hbs
+++ b/content/Components/article.hbs
@@ -4,6 +4,7 @@ title: Article Template
 nav-title: "Article"
 nav-text: "Article"
 nav-variant: "article"
+page-category: "components"
 ---
 
 <main class="w w--main">
