--- a/content/Components/badges.hbs
+++ b/content/Components/badges.hbs
@@ -4,6 +4,7 @@ title: Badges
 nav-title: "Badges"
 nav-text: "Badges"
 nav-variant: "badges"
+page-category: "components"
 ---
 
 <main class="w w--main">
