--- a/content/Components/banners.hbs
+++ b/content/Components/banners.hbs
@@ -4,6 +4,7 @@ title: Banners
 nav-title: "Banners"
 nav-text: "Banners"
 nav-variant: "banners"
+page-category: "components"
 ---
 
 <main class="w w--main">
