--- a/content/Components/breadcrumbs.hbs
+++ b/content/Components/breadcrumbs.hbs
@@ -4,6 +4,7 @@ title: Breadcrumbs
 nav-title: "Breadcrumbs"
 nav-text: "Breadcrumbs"
 nav-variant: "breadcrumbs"
+page-category: "components"
 ---
 
 <main class="w w--main">
