--- a/content/Components/button-dropdowns.hbs
+++ b/content/Components/button-dropdowns.hbs
@@ -4,6 +4,7 @@ title: Buttons Dropdowns
 nav-title: "Buttons Dropdowns"
 nav-text: "Buttons Dropdowns"
 nav-variant: "buttons-dropdowns"
+page-category: "components"
 ---
 
 <main class="w w--main">
