--- a/content/Components/button-groups.hbs
+++ b/content/Components/button-groups.hbs
@@ -4,6 +4,7 @@ title: Buttons Groups
 nav-title: "Buttons Groups"
 nav-text: "Buttons Groups"
 nav-variant: "buttons-groups"
+page-category: "components"
 ---
 
 <main class="w w--main">
