--- a/content/Components/button-stateful.hbs
+++ b/content/Components/button-stateful.hbs
@@ -4,6 +4,7 @@ title: Buttons Stateful
 nav-title: "Buttons Stateful"
 nav-text: "Buttons Stateful"
 nav-variant: "buttons-stateful"
+page-category: "components"
 ---
 
 <main class="w w--main">
