--- a/content/Components/button.hbs
+++ b/content/Components/button.hbs
@@ -4,6 +4,7 @@ title: Buttons
 nav-title: "Buttons"
 nav-text: "Buttons"
 nav-variant: "button"
+page-category: "components"
 ---
 
 <main class="w w--main">
