--- a/content/Components/callout.hbs
+++ b/content/Components/callout.hbs
@@ -4,6 +4,7 @@ title: Callout Template
 nav-title: "Callout"
 nav-text: "Callout"
 nav-variant: "callout"
+page-category: "components"
 ---
 
 <main class="w w--main">
