--- a/content/Components/card.hbs
+++ b/content/Components/card.hbs
@@ -4,6 +4,7 @@ title: Card Template
 nav-title: "Card"
 nav-text: "Card"
 nav-variant: "card"
+page-category: "components"
 ---
 
 <main class="w w--main">
