--- a/content/Components/dropdowns.hbs
+++ b/content/Components/dropdowns.hbs
@@ -4,6 +4,7 @@ title: Dropdowns
 nav-title: "Dropdowns"
 nav-text: "Dropdowns"
 nav-variant: "dropdowns"
+page-category: "components"
 ---
 
 <main class="w w--main">
