--- a/content/Components/focus.hbs
+++ b/content/Components/focus.hbs
@@ -4,6 +4,7 @@ title: Focus
 nav-title: "Focus"
 nav-text: "Focus"
 nav-variant: "focus"
+page-category: "components"
 ---
 
 <main class="w w--main">
