--- a/content/Components/hovercard.hbs
+++ b/content/Components/hovercard.hbs
@@ -4,6 +4,7 @@ title: Hover Card
 nav-title: "Hover Card"
 nav-text: "Hover Card"
 nav-variant: "hovercard"
+page-category: "components"
 ---
 
 <main class="w w--main">
