--- a/content/Components/index.hbs
+++ b/content/Components/index.hbs
@@ -4,6 +4,9 @@ title: Components Index
 nav-title: "Components"
 nav-text: "Components"
 nav-variant: "components"
+navigation-main: true
+navigation-order: 2
+page-category: "components"
 ---
 
 <main class="w w--main">
