--- a/content/Components/input-gropus.hbs
+++ b/content/Components/input-gropus.hbs
@@ -4,6 +4,7 @@ title: Input Groups
 nav-title: "Input Groups"
 nav-text: "Input Groups"
 nav-variant: "input-groups"
+page-category: "components"
 ---
 
 <main class="w w--main">
