--- a/content/Components/input.hbs
+++ b/content/Components/input.hbs
@@ -4,6 +4,7 @@ title: Input
 nav-title: "Input"
 nav-text: "Input"
 nav-variant: "input"
+page-category: "components"
 ---
 
 <main class="w w--main">
