--- a/content/Components/labels.hbs
+++ b/content/Components/labels.hbs
@@ -4,6 +4,7 @@ title: Labels
 nav-title: "Labels"
 nav-text: "Labels"
 nav-variant: "labels"
+page-category: "components"
 ---
 
 <main class="w w--main">
