--- a/content/Components/modals.hbs
+++ b/content/Components/modals.hbs
@@ -4,6 +4,7 @@ title: Modals
 nav-title: "Modals"
 nav-text: "Modals"
 nav-variant: "modals"
+page-category: "components"
 ---
 
 <main class="w w--main">
