--- a/content/Components/pagination.hbs
+++ b/content/Components/pagination.hbs
@@ -4,6 +4,7 @@ title: Pagination
 nav-title: "Pagination"
 nav-text: "Pagination"
 nav-variant: "pagination"
+page-category: "components"
 ---
 
 <main class="w w--main">
