--- a/content/Components/panels.hbs
+++ b/content/Components/panels.hbs
@@ -4,6 +4,7 @@ title: Panels
 nav-title: "Panels"
 nav-text: "Panels"
 nav-variant: "panels"
+page-category: "components"
 ---
 
 <main class="w w--main">
