--- a/content/Components/popover.hbs
+++ b/content/Components/popover.hbs
@@ -4,6 +4,7 @@ title: Popovers
 nav-title: "Popovers"
 nav-text: "Popovers"
 nav-variant: "popovers"
+page-category: "components"
 ---
 
 <main class="w w--main">
