--- a/content/Components/progress-bars.hbs
+++ b/content/Components/progress-bars.hbs
@@ -4,6 +4,7 @@ title: Progress Bars
 nav-title: "Progress Bars"
 nav-text: "Progress Bars"
 nav-variant: "progress-bars"
+page-category: "components"
 ---
 
 <main class="w w--main">
