--- a/content/Components/select.hbs
+++ b/content/Components/select.hbs
@@ -4,6 +4,7 @@ title: Select
 nav-title: "Select"
 nav-text: "Select"
 nav-variant: "select"
+page-category: "components"
 ---
 
 <main class="w w--main">
