--- a/content/Components/side-sliders.hbs
+++ b/content/Components/side-sliders.hbs
@@ -4,6 +4,7 @@ title: Side Sliders
 nav-title: "Side Sliders"
 nav-text: "Side Sliders"
 nav-variant: "side-sliders"
+page-category: "components"
 ---
 
 <main class="w w--main">
