--- a/content/Components/story.hbs
+++ b/content/Components/story.hbs
@@ -4,6 +4,7 @@ title: Story
 nav-title: "Story"
 nav-text: "Story"
 nav-variant: "story"
+page-category: "components"
 ---
 
 <main class="w w--main">
