--- a/content/Components/thumbnails.hbs
+++ b/content/Components/thumbnails.hbs
@@ -4,6 +4,7 @@ title: Thumbnails
 nav-title: "Thumbnails"
 nav-text: "Thumbnails"
 nav-variant: "thumbnails"
+page-category: "components"
 ---
 
 <main class="w w--main">
