--- a/content/Components/toast.hbs
+++ b/content/Components/toast.hbs
@@ -4,6 +4,7 @@ title: Toasts
 nav-title: "Toasts"
 nav-text: "Toasts"
 nav-variant: "toasts"
+page-category: "components"
 ---
 
 <main class="w w--main">
