--- a/content/Components/toolbars.hbs
+++ b/content/Components/toolbars.hbs
@@ -4,6 +4,7 @@ title: Toolbars
 nav-title: "Toolbars"
 nav-text: "Toolbars"
 nav-variant: "toolbars"
+page-category: "components"
 ---
 
 <main class="w w--main">
