--- a/content/Components/tooltip.hbs
+++ b/content/Components/tooltip.hbs
@@ -4,6 +4,7 @@ title: Tooltips
 nav-title: "Tooltips"
 nav-text: "Tooltips"
 nav-variant: "tooltips"
+page-category: "components"
 ---
 
 <main class="w w--main">
