--- a/content/Components/wells.hbs
+++ b/content/Components/wells.hbs
@@ -4,6 +4,7 @@ title: Wells
 nav-title: "Wells"
 nav-text: "Wells"
 nav-variant: "wells"
+page-category: "components"
 ---
 
 <main class="w w--main">
