--- a/content/Systems/buttons.hbs
+++ b/content/Systems/buttons.hbs
@@ -4,6 +4,7 @@ title: Buttons
 nav-title: "Buttons"
 nav-text: "Buttons"
 nav-variant: "buttons"
+page-category: "systems"
 ---
 
 <main class="w w--main">
