--- a/content/Systems/helpers.hbs
+++ b/content/Systems/helpers.hbs
@@ -4,6 +4,7 @@ title: Helpers
 nav-title: "Helpers"
 nav-text: "Helpers"
 nav-variant: "helpers"
+page-category: "systems"
 ---
 
 <main class="w w--main">
