--- a/content/Systems/images.hbs
+++ b/content/Systems/images.hbs
@@ -4,6 +4,7 @@ title: Images
 nav-title: "Images"
 nav-text: "Images"
 nav-variant: "images"
+page-category: "systems"
 ---
 
 <main class="w w--main">
