--- a/content/Systems/structure.hbs
+++ b/content/Systems/structure.hbs
@@ -4,6 +4,7 @@ title: Structure
 nav-title: "Structure"
 nav-text: "Structure"
 nav-variant: "structure"
+page-category: "systems"
 ---
 
 <main class="w w--main">
