--- a/content/Systems/tables.hbs
+++ b/content/Systems/tables.hbs
@@ -4,6 +4,7 @@ title: Tables
 nav-title: "Tables"
 nav-text: "Tables"
 nav-variant: "tables"
+page-category: "systems"
 ---
 
 <main class="w w--main">
