--- a/content/Systems/typography.hbs
+++ b/content/Systems/typography.hbs
@@ -4,6 +4,7 @@ title: Typography
 nav-title: "Typography"
 nav-text: "Typography"
 nav-variant: "typography"
+page-category: "systems"
 ---
 
 <main class="w w--main">
