--- a/content/Tests/index.hbs
+++ b/content/Tests/index.hbs
@@ -3,8 +3,11 @@ title: This is a test page
 subtitle: Where I am trying out wether or not we can create dynamicly linked partials
 
 nav-title: "Test Page"
-nav-text: "test"
+nav-text: "Tests"
 nav-variant: "test"
+navigation-main: true
+navigation-order: 5
+page-category: "tests"
 ---
 
 <main class="w w--main">
