--- a/content/_partials/ALLOY_copyright.hbs
+++ b/content/_partials/ALLOY_copyright.hbs
@@ -2,6 +2,7 @@
     <div class="g">
         <div class="c__md--1">
             <div class="copyright" role="contentinfo">&copy; Copyright {{ year }} ALLOY, The ALLOY Team, All rights reserved.</div>
+            <small><strong>Last Built:</strong> {{now}}</small>
         </div>
     </div>
 </div>
