--- a/content/Animation/index.hbs
+++ b/content/Animation/index.hbs
@@ -5,6 +5,9 @@ title: Animation Index
 nav-title: "Animation"
 nav-text: "Animation"
 nav-variant: "animation"
+navigation-main: true
+navigation-order: 4
+page-category: "animation"
 ---
 
 <main class="w w--main">
