--- a/content/index.hbs
+++ b/content/index.hbs
@@ -24,7 +24,7 @@ navigation-order: 1
 					<ul>
 	    				{{#each this.pages}}
 		            		{{#this}}
-	                        <li><a class="list__link list__link--{{data.nav-variant}}" href="{{relative ../../page.dest this.dest}}" title="{{data.nav-title}}"><span>{{capitalizeFirst data.nav-text}}</span></a></li>
+	                        <li><a class="list__link list__link--{{data.nav-variant}}" href="{{relative ../../../page.dest this.dest}}" title="{{data.nav-title}}"><span>{{capitalizeFirst data.nav-text}}</span></a></li>
 	                        {{/this}}
 	        			{{/each}}
 	                </ul>
