--- a/content/index.hbs
+++ b/content/index.hbs
@@ -21,6 +21,7 @@ navigation-order: 1
 
 				<div class="page__body rte">
 					{{#withSort page-category "page.title"}}
+					<h2>{{page-category}}</h2>
 					<ul>
 	    				{{#each this.pages}}
 		            		{{#this}}
