--- a/content/Systems/index.hbs
+++ b/content/Systems/index.hbs
@@ -21,22 +21,22 @@ page-category: "systems"
 
 <!-- writings -->
 
-		        <div class="page__body rte">
 
-
-
-		        </div>
+				<div class="page__body rte">
+					{{#withSort page-category "page.title"}}
+					{{#is page-category "systems"}}
+					<ul>
+	    				{{#each this.pages}}
+		            		{{#this}}
+	                        <li><a class="list__link list__link--{{data.nav-variant}}" href="{{relative ../../../page.dest this.dest}}" title="{{data.nav-title}}"><span>{{capitalizeFirst data.nav-text}}</span></a></li>
+	                        {{/this}}
+	        			{{/each}}
+	                </ul>
+	                {{/is}}
+	                {{/withSort}}
+				</div>
 
 <!-- reference -->
-
-		        <section class="section section--reference">
-		            <header class="section__head">
-		                <h2 class="section__title">References</h2>
-		            </header>
-		            <div class="section__body rte">
-
-		            </div>
-		        </section>
 
 	        </div>
 
