Added example layout

--- a/assets/less/base_modules/panel.less
+++ b/assets/less/base_modules/panel.less
@@ -8,12 +8,14 @@
 // VARIABLES
 // ----------------------------------------------------
 
+@PANEL-Color:				@COLOR-White;
 @PANEL-BgColor:				@COLOR-Base;
 
 // BASE
 // ----------------------------------------------------
 
 .panel {
+	color: @PANEL-Color;
 	background-color: @PANEL-BgColor;
 	background-clip: padding-box;
 	._padding (20);
