--- a/assets/less/modules/wrap.less
+++ b/assets/less/modules/wrap.less
@@ -12,7 +12,7 @@
 	
 }
 
-.w--header {
+.w--head {
 	background-color: lighten(@NAVIGATION-BgColor, 30%);
 	text-align: center;
 	z-index: @Z-INDEX-Level6;
@@ -29,8 +29,7 @@
 	._padding (40, 0);
 }
 
-.w--footer {
-	color: @COLOR-White;
+.w--foot {
 	background-color: lighten(@COLOR-Base, 30%);
 }
 
@@ -53,7 +52,7 @@
 
 @media only screen and (max-width: @MQ-Small) {
 
-	.w--header {
+	.w--head {
 		position: fixed;
 		top: 0;
 		text-align: left;
@@ -78,7 +77,7 @@
 
 @media only screen and (min-width: @MQ-Medium-min) and (max-width: @MQ-Medium) {
 
-	.w--footer {
+	.w--foot {
 		._padding (20, 0);
 	}
 
@@ -89,7 +88,7 @@
 
 @media only screen and (min-width: @MQ-Large-min) {
 
-	.w--footer {
+	.w--foot {
 		._padding (40, 0);
 	}
 
