--- a/content/_partials/ALLOY_header.hbs
+++ b/content/_partials/ALLOY_header.hbs
@@ -1,4 +1,4 @@
-<header id="header" role="banner" class="w w--header">
+<header id="header" role="banner" class="w w--head">
 	<div class="g g--nogutter">
 		<div class="c__lg--1">
 			<a href="/" class="link link--logo" title="Alloy"><img src="/assets/img/logo-header.png" class="link__image" alt="Alloy" /></a>
