--- a/content/_partials/box.hbs
+++ b/content/_partials/box.hbs
@@ -1,5 +1,5 @@
 {{#this}}
-<div class="box{{#if item.modifier}} box--{{item.modifier}}{{/if}}{{#if item.depth}} {{item.depth}}{{/if}}">
+<div class="box{{#if item.modifier}} box--{{item.modifier}}{{/if}}{{#if item.depth}} d{{item.depth}}{{/if}}">
 	{{#if content.title}}
 	<div class="box__head">
 		<h4 class="box__title">{{content.title}}</h4>
