--- a/content/_partials/ALLOY_footer.hbs
+++ b/content/_partials/ALLOY_footer.hbs
@@ -1,4 +1,4 @@
-<div class="w w--footer">
+<footer class="w w--foot">
 	<div class="g">
 	
 		<div class="c__md--1-3 c__lg--1-3">
@@ -14,4 +14,4 @@
 		</div>
 
 	</div>
-</div>
+</footer>
