Examples now added to menu
also added in a target variable to nav items.

--- a/content/Examples/index.hbs
+++ b/content/Examples/index.hbs
@@ -2,8 +2,12 @@
 title: Layout Examples
 layout: example.hbs
 
+navigation-main: true
+navigation-order: 6
+
 nav-title: "Examples"
 nav-text: "Examples"
+nav-target: "_blank"
 nav-variant: "examples"
 page-category: "examples"
 ---
