--- a/content/Examples/index.hbs
+++ b/content/Examples/index.hbs
@@ -43,6 +43,10 @@ page-category: "examples"
 
 </main>
 
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none" style="display:block;background-color:#ABB4E2;">
+	<path d="M0 0 C 50 100 80 100 100 0 Z" style="fill:#F5F5F5;"></path>
+</svg>
+
 <footer class="w w--foot">
 	<div class="g">
 	    <div class="c__lg--1">
