--- a/content/Components/alerts.hbs
+++ b/content/Components/alerts.hbs
@@ -36,7 +36,8 @@ page-category: "components"
 
 				        {{> alert alert }}
 				        {{> alert alert-info }}
-				        {{> alert alert-error }}
+				        {{> alert alert-warn }}
+				        {{> alert alert-danger }}
 				        {{> alert alert-success }}
 
 				        <!-- end of code -->
