--- a/content/Systems/helpers.hbs
+++ b/content/Systems/helpers.hbs
@@ -33,7 +33,7 @@ page-category: "systems"
 		            <div class="secton__body rte">
 				        <!-- code -->
 				        	<p>These will appear as classes in their own right and can be used to modify elements without creating a new modifier for that block.</p>
-							<p><code>.c</code> <code>.invisible</code> <code>.visible</code> <code>.ir</code> <code>.rte</code> <code>.hide</code> <code>.show</code> <code>.left</code> <code>.right</code> <code>.center</code> <code>.center-block</code> <code>.show-mobile</code> <code>.show-tablet</code> <code>show-desktop</code> <code>.hide-mobile</code> <code>.hide-tablet</code> <code>hide-desktop</code> <code>.xsmall</code><code>.small</code> <code>.large</code> <code>.xlarge</code> <code>.active</code> <code>.current</code></p>
+							<p><code>.c</code> <code>.invisible</code> <code>.visible</code> <code>.ir</code> <code>.rte</code> <code>.hide</code> <code>.show</code> <code>.left</code> <code>.right</code> <code>.center</code> <code>.center-block</code> <code>.show-mobile</code> <code>.show-tablet</code> <code>show-desktop</code> <code>.hide-mobile</code> <code>.hide-tablet</code> <code>hide-desktop</code> <code>.xsmall</code><code>.small</code> <code>.large</code> <code>.xlarge</code> <code>.active</code> <code>.current</code> <code>.info</code> <code>.warn</code> <code>.danger</code> <code>.success</code></p>
 
 				        <!-- end of code -->
 			        </div>
