--- a/content/Systems/grids.hbs
+++ b/content/Systems/grids.hbs
@@ -172,7 +172,7 @@ page-category: "systems"
 	</div>
 
 	<div class="g">
-		<div class="c__lg--1"><h2>16's</h2></div>
+		<div class="c__lg--1"><h2>Grid of 16's</h2></div>
 		<div class="c__lg--16-16"><div class="gex">16-16</div></div>
 		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
 		<div class="c__lg--15-16"><div class="gex">15-16</div></div>
@@ -193,7 +193,7 @@ page-category: "systems"
 	</div>
 
 	<div class="g">
-		<div class="c__lg--1"><h2>15's</h2></div>
+		<div class="c__lg--1"><h2>Grid of 15's</h2></div>
 		<div class="c__lg--15-15"><div class="gex">1-15</div></div>
 		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
 		<div class="c__lg--14-15"><div class="gex">14-15</div></div>
@@ -212,7 +212,7 @@ page-category: "systems"
 	</div>
 
 	<div class="g">
-		<div class="c__lg--1"><h2>14's</h2></div>
+		<div class="c__lg--1"><h2>Grid of 14's</h2></div>
 		<div class="c__lg--14-14"><div class="gex">14-14</div></div>
 		<div class="c__lg--1-14"><div class="gex">1-14</div></div>
 		<div class="c__lg--13-14"><div class="gex">13-14</div></div>
@@ -231,7 +231,7 @@ page-category: "systems"
 	</div>
 
 	<div class="g">
-		<div class="c__lg--1"><h2>13's</h2></div>
+		<div class="c__lg--1"><h2>Grid of 13's</h2></div>
 		<div class="c__lg--13-13"><div class="gex">13-13</div></div>
 		<div class="c__lg--1-13"><div class="gex">1-13</div></div>
 		<div class="c__lg--12-13"><div class="gex">12-13</div></div>
@@ -249,7 +249,7 @@ page-category: "systems"
 
 
 	<div class="g">
-		<div class="c__lg--1"><h2>12's</h2></div>
+		<div class="c__lg--1"><h2>Grid of 12's</h2></div>
 		<div class="c__lg--12-12"><div class="gex">12-12</div></div>
 		<div class="c__lg--1-12"><div class="gex">1-12</div></div>
 		<div class="c__lg--11-12"><div class="gex">11-12</div></div>
@@ -266,7 +266,7 @@ page-category: "systems"
 	</div>
 
 	<div class="g">
-		<div class="c__lg--1"><h2>11's</h2></div>
+		<div class="c__lg--1"><h2>Grid of 11's</h2></div>
 		<div class="c__lg--11-11"><div class="gex">11-11</div></div>
 		<div class="c__lg--1-11"><div class="gex">1-11</div></div>
 		<div class="c__lg--10-11"><div class="gex">10-11</div></div>
@@ -281,7 +281,7 @@ page-category: "systems"
 	</div>
 
 	<div class="g">
-		<div class="c__lg--1"><h2>10's</h2></div>
+		<div class="c__lg--1"><h2>Grid of 10's</h2></div>
 		<div class="c__lg--10-10"><div class="gex">10-10</div></div>
 		<div class="c__lg--1-10"><div class="gex">1-10</div></div>
 		<div class="c__lg--9-10"><div class="gex">9-10</div></div>
@@ -296,7 +296,7 @@ page-category: "systems"
 	</div>
 
 	<div class="g">
-		<div class="c__lg--1"><h2>9's</h2></div>
+		<div class="c__lg--1"><h2>Grid of 9's</h2></div>
 		<div class="c__lg--9-9"><div class="gex">9-9</div></div>
 		<div class="c__lg--1-9"><div class="gex">1-9</div></div>
 		<div class="c__lg--8-9"><div class="gex">8-9</div></div>
@@ -309,7 +309,7 @@ page-category: "systems"
 	</div>
 
 	<div class="g">
-		<div class="c__lg--1"><h2>8's</h2></div>
+		<div class="c__lg--1"><h2>Grid of 8's</h2></div>
 		<div class="c__lg--8-8"><div class="gex">8-8</div></div>
 		<div class="c__lg--1-8"><div class="gex">1-8</div></div>
 		<div class="c__lg--7-8"><div class="gex">7-8</div></div>
@@ -323,7 +323,7 @@ page-category: "systems"
 	</div>
 
 	<div class="g">
-		<div class="c__lg--1"><h2>7's</h2></div>
+		<div class="c__lg--1"><h2>Grid of 7's</h2></div>
 		<div class="c__lg--7-7"><div class="gex">7-7</div></div>
 		<div class="c__lg--1-7"><div class="gex">1-7</div></div>
 		<div class="c__lg--6-7"><div class="gex">6-7</div></div>
@@ -334,7 +334,7 @@ page-category: "systems"
 	</div>
 
 	<div class="g">
-		<div class="c__lg--1"><h2>6's</h2></div>
+		<div class="c__lg--1"><h2>Grid of 6's</h2></div>
 		<div class="c__lg--6-6"><div class="gex">6-6</div></div>
 		<div class="c__lg--1-6"><div class="gex">1-6</div></div>
 		<div class="c__lg--5-6"><div class="gex">5-6</div></div>
@@ -345,7 +345,7 @@ page-category: "systems"
 	</div>
 
 	<div class="g">
-		<div class="c__lg--1"><h2>5's</h2></div>
+		<div class="c__lg--1"><h2>Grid of 5's</h2></div>
 		<div class="c__lg--5-5"><div class="gex">5-5</div></div>
 		<div class="c__lg--1-5"><div class="gex">1-5</div></div>
 		<div class="c__lg--4-5"><div class="gex">4-5</div></div>
@@ -355,7 +355,7 @@ page-category: "systems"
 	</div>
 
 	<div class="g">
-		<div class="c__lg--1"><h2>4's</h2></div>
+		<div class="c__lg--1"><h2>Grid of 4's</h2></div>
 		<div class="c__lg--4-4"><div class="gex">4-4</div></div>
 		<div class="c__lg--1-4"><div class="gex">1-4</div></div>
 		<div class="c__lg--3-4"><div class="gex">3-4</div></div>
@@ -364,14 +364,14 @@ page-category: "systems"
 	</div>
 
 	<div class="g">
-		<div class="c__lg--1"><h2>3's</h2></div>
+		<div class="c__lg--1"><h2>Grid of 3's</h2></div>
 		<div class="c__lg--3-3"><div class="gex">3-3</div></div>
 		<div class="c__lg--1-3"><div class="gex">1-3</div></div>
 		<div class="c__lg--2-3"><div class="gex">2-3</div></div>
 	</div>
 
 	<div class="g">
-		<div class="c__lg--1"><h2>2's</h2></div>
+		<div class="c__lg--1"><h2>Grid of 2's</h2></div>
 		<div class="c__lg--2-2"><div class="gex">2-2</div></div>
 		<div class="c__lg--1-2"><div class="gex">1-2</div></div>
 		<div class="c__lg--1-2"><div class="gex">1-2</div></div>
