--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -23,6 +23,7 @@
 @import "base_modules/alert.less";
 @import "base_modules/pagination.less";
 @import "base_modules/box.less";
+@import "base_modules/breadcrumbs.less";
 
 // MODULES
 // ----------------------------------------------------
